[options]
install_requires =
    setuptools==38.5.2
    wheel==0.30.0

[tool:pytest]
addopts = -s --cov=yahoo_panoptes_snmp --cov-report=term-missing --flake8
flake8-ignore =
    build/*.py ALL
    src/net-snmp-5.7.3/python/*.py ALL
    src/net-snmp-5.7.3/python/netsnmp/*.py ALL
    src/net-snmp-5.7.3/python/netsnmp/tests/*.py ALL
